# multiscale_ssa

./: aclocal.m4  config.h  configure.ac  short-file-deep.ini  short.file  test.file  test.file.1  test.file.2
src/: Makefile.am  cl-helper.c  cl-helper.h  main.c  mssa_float.c  mssa_int.c
